# m2x00w

./: INSTALL  Makefile.in  README  README.ghostscript  README.md  aclocal.m4  configure.in  m2300w.spec.in
foomatic/: Makefile.in  foomatic-rip
foomatic/driver/: m2300w.xml  m2400w.xml
foomatic/opt/: m2300w-ColorMode.xml  m2300w-ColorProfile.xml  m2300w-Debug.xml  m2300w-DefaultRGB.xml  m2300w-MediaType.xml  m2300w-PageSize.xml  m2300w-PrintoutMode.xml  m2300w-Quality.xml  m2300w-Resolution.xml  m2300w-psnup.xml
foomatic/printer/: Minolta-magicolor_2300W.xml  Minolta-magicolor_2400W.xml
ppd/: Makefile.in  magicolor_2300W-m2300w.ppd  magicolor_2400W-m2400w.ppd  magicolor_2500W-m2500w.ppd
psfiles/: Makefile.in
src/: Makefile.in  m2300w-wrapper.in  m2300w.c  m2400w.c  m2x00w.c  m2x00w.h
